[package]
name = "aoc"
version = "0.1.0"
authors = ["Smelly Pooh <plop@redbrick.dcu.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
futures = "0.3"
itertools = "0.8"
tokio = { version = "0.2", features = ["full"] }
